Adjustments in the index and css page.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </nav>
     </header>
-    <section class="contain">
+    <section class="contain-index">
         <article class="text-contain">
             <div class="description">
                 <h1>As melhores receitas</h1>
