--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <img src="assets/img/logo.png" alt="Logo Foodfy">
+                <a href="index.html">
+                    <img src="assets/img/logo.png" alt="Logo Foodfy">
+                </a>
             </div>
             <div class="menu">
                 <a href="about.html">Sobre</a>
