--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             </div>
             <div class="menu">
                 <a href="about.html">Sobre</a>
-                <a href="/">Receitas</a>
+                <a href="recipe.html">Receitas</a>
             </div>
         </nav>
     </header>
