--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="menu">
                 <a href="about.html">Sobre</a>
-                <a href="/">Receitas</a>
+                <a href="recipe.html">Receitas</a>
             </div>
         </nav>
     </header>
@@ -46,7 +46,7 @@
             </div>
             <div class="card-accessed">
                 <div class="img-accessed">
-                    <img src="assets/img/pizza.png" alt="Burguer">
+                    <img src="assets/img/pizza.png" alt="Pizza">
                 </div>
                 <div class="card-content-accessed">
                     <h3>Pizza 4 estações</h3>
@@ -55,44 +55,44 @@
             </div>
             <div class="card-accessed">
                 <div class="img-accessed">
-                    <img src="assets/img/espaguete.png" alt="Burguer">
+                    <img src="assets/img/espaguete.png" alt="Espaguete">
                 </div>
-                <div class="card-content-accessed">
+                <div class=" card-content-accessed ">
                     <h3>Espaguete ao alho</h3>
-                    <span class="author">por Júlia Kinoto</span>
+                    <span class="author ">por Júlia Kinoto</span>
                 </div>
             </div>
-            <div class="card-accessed">
-                <div class="img-accessed">
-                    <img src="assets/img/lasanha.png" alt="Burguer">
+            <div class="card-accessed ">
+                <div class="img-accessed ">
+                    <img src="assets/img/lasanha.png " alt="Lasanha">
                 </div>
-                <div class="card-content-accessed">
+                <div class="card-content-accessed ">
                     <h3>Lasanha mac n' cheese</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author ">por Jorge Relato</span>
                 </div>
             </div>
-            <div class="card-accessed">
-                <div class="img-accessed">
-                    <img src="assets/img/doce.png" alt="Burguer">
+            <div class="card-accessed ">
+                <div class="img-accessed ">
+                    <img src="assets/img/doce.png " alt="Doce">
                 </div>
-                <div class="card-content-accessed">
+                <div class="card-content-accessed ">
                     <h3>Docinhos pão-do-céu</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author ">por Jorge Relato</span>
                 </div>
             </div>
-            <div class="card-accessed">
-                <div class="img-accessed">
-                    <img src="assets/img/asinhas.png" alt="Burguer">
+            <div class="card-accessed ">
+                <div class="img-accessed ">
+                    <img src="assets/img/asinhas.png " alt="Assinhas">
                 </div>
-                <div class="card-content-accessed">
+                <div class="card-content-accessed ">
                     <h3>Assinhas de frango ao barbecue</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author ">por Jorge Relato</span>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer ">
         <h6>Todos direitos reservados, receitas Foodfy.</h6>
     </footer>
 </body>
