Adjustments to the "recipes" page and the foodfy challenge project is finalized.

--- a/recipe.html
+++ b/recipe.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="card-content-accessed">
                     <h3>Lasanha mac n' cheese</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author">por Juliano Vieira</span>
                 </div>
             </div>
             <div id="doce" class="card-accessed">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="card-content-accessed">
                     <h3>Docinhos pão-do-céu</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author">por Ricardo Golvea</span>
                 </div>
             </div>
             <div id="asinhas" class="card-accessed">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="card-content-accessed">
                     <h3>Assinhas de frango ao barbecue</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author">por Vania Steroski</span>
                 </div>
             </div>
             <div id="burguer" class="card-accessed">
@@ -110,7 +110,7 @@
                 </div>
                 <div class="card-content-accessed">
                     <h3>Lasanha mac n' cheese</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author">por Juliano Vieira</span>
                 </div>
             </div>
             <div id="doce" class="card-accessed">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="card-content-accessed">
                     <h3>Docinhos pão-do-céu</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author">por Ricardo Golvea</span>
                 </div>
             </div>
             <div id="asinhas" class="card-accessed">
@@ -128,7 +128,7 @@
                 </div>
                 <div class="card-content-accessed">
                     <h3>Assinhas de frango ao barbecue</h3>
-                    <span class="author">por Jorge Relato</span>
+                    <span class="author">por Vania Steroski</span>
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
             <div class="modal-content">
             </div>
             <a class="close-modal">
-                <button>Fechar modal</button>
+                Fechar modal
             </a>
         </div>
     </div>
